--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.documentpropertiesdata.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.documentpropertiesdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.DocumentPropertiesData:interface'
-    summary: 描述通过调用返回的数据的接口`documentProperties.toJSON()`<!-- -->.
-    name: Word.Interfaces.DocumentPropertiesData
-    fullName: Word.Interfaces.DocumentPropertiesData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
+### YamlMime:TSType
+name: Word.Interfaces.DocumentPropertiesData
+uid: word!Word.Interfaces.DocumentPropertiesData:interface
+package: word!
+fullName: Word.Interfaces.DocumentPropertiesData
+summary: 描述通过调用返回的数据的接口 `documentProperties.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: c2a7b5e81dcfe4b5d55496b93056000f1877bc48
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49327988"
