--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.inlinepictureloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.inlinepictureloadoptions.yml
@@ -1,244 +1,242 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions:interface'
-    summary: |-
-      表示嵌入式图片。
+### YamlMime:TSType
+name: Word.Interfaces.InlinePictureLoadOptions
+uid: word!Word.Interfaces.InlinePictureLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.InlinePictureLoadOptions
+summary: >-
+  表示嵌入式图片。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.InlinePictureLoadOptions
-    fullName: Word.Interfaces.InlinePictureLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#$all:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#altTextDescription:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#altTextTitle:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#height:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#hyperlink:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#lockAspectRatio:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#paragraph:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#parentContentControl:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#parentContentControlOrNullObject:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#parentTable:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#parentTableCell:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#parentTableCellOrNullObject:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#parentTableOrNullObject:member'
-      - 'word!Word.Interfaces.InlinePictureLoadOptions#width:member'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#altTextDescription:member'
-    summary: |-
-      获取或设置一个字符串，表示与嵌入式图像相关联的可选文字。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: altTextDescription
-    fullName: altTextDescription
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'altTextDescription?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#altTextTitle:member'
-    summary: |-
-      获取或设置包含嵌入式图像的标题的字符串。
+  \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: altTextDescription
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#altTextDescription:member
+  package: word!
+  fullName: altTextDescription
+  summary: >-
+    获取或设置一个字符串，表示与嵌入式图像相关联的可选文字。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: altTextTitle
-    fullName: altTextTitle
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'altTextTitle?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#height:member'
-    summary: |-
-      获取或设置描述嵌入式图像的高度的数字。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#hyperlink:member'
-    summary: |-
-      获取或设置图像上的超链接。 使用 " \# " 将地址部分与可选位置部分分开。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'altTextDescription?: boolean;'
+    return:
+      type: boolean
+- name: altTextTitle
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#altTextTitle:member
+  package: word!
+  fullName: altTextTitle
+  summary: >-
+    获取或设置包含嵌入式图像的标题的字符串。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: hyperlink
-    fullName: hyperlink
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hyperlink?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#lockAspectRatio:member'
-    summary: |-
-      获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: lockAspectRatio
-    fullName: lockAspectRatio
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'lockAspectRatio?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#paragraph:member'
-    summary: |-
-      获取包含嵌入式图像的父段落。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'altTextTitle?: boolean;'
+    return:
+      type: boolean
+- name: height
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#height:member
+  package: word!
+  fullName: height
+  summary: >-
+    获取或设置描述嵌入式图像的高度的数字。
 
-      \[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: Word.Interfaces.ParagraphLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ParagraphLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#parentContentControl:member'
-    summary: |-
-      获取包含嵌入式图像的内容控件。 如果没有父内容控件，则会引发错误。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentContentControl
-    fullName: parentContentControl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentContentControl?: Word.Interfaces.ContentControlLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#parentContentControlOrNullObject:member'
-    summary: |-
-      获取包含嵌入式图像的内容控件。 如果没有父内容控件，则返回 null 对象。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: hyperlink
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#hyperlink:member
+  package: word!
+  fullName: hyperlink
+  summary: >-
+    获取或设置图像上的超链接。 使用 " \# " 将地址部分与可选位置部分分开。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentContentControlOrNullObject
-    fullName: parentContentControlOrNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentContentControlOrNullObject?: Word.Interfaces.ContentControlLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#parentTable:member'
-    summary: |-
-      获取包含嵌入式图像的 table。 如果表中不包含该错误，则会引发错误。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTable
-    fullName: parentTable
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTable?: Word.Interfaces.TableLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#parentTableCell:member'
-    summary: |-
-      获取包含嵌入式图像的 tableCell。 如果表单元格中不包含错误，则会引发错误。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hyperlink?: boolean;'
+    return:
+      type: boolean
+- name: lockAspectRatio
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#lockAspectRatio:member
+  package: word!
+  fullName: lockAspectRatio
+  summary: >-
+    获取或设置指示在您调整嵌入式图像大小时其是否保留原始比例的值。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTableCell
-    fullName: parentTableCell
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTableCell?: Word.Interfaces.TableCellLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableCellLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#parentTableCellOrNullObject:member'
-    summary: |-
-      获取包含嵌入式图像的 tableCell。 如果未包含在 tableCell 中，则此关系返回空对象。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTableCellOrNullObject
-    fullName: parentTableCellOrNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTableCellOrNullObject?: Word.Interfaces.TableCellLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableCellLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#parentTableOrNullObject:member'
-    summary: |-
-      获取包含嵌入式图像的 table。 如果未包含在 table 中，则此关系返回空对象。
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'lockAspectRatio?: boolean;'
+    return:
+      type: boolean
+- name: paragraph
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#paragraph:member
+  package: word!
+  fullName: paragraph
+  summary: >-
+    获取包含嵌入式图像的父段落。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: parentTableOrNullObject
-    fullName: parentTableOrNullObject
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTableOrNullObject?: Word.Interfaces.TableLoadOptions;'
-      return:
-        type:
-          - 'word!Word.Interfaces.TableLoadOptions:interface'
-  - uid: 'word!Word.Interfaces.InlinePictureLoadOptions#width:member'
-    summary: |-
-      获取或设置描述嵌入式图像的宽度的数字。
 
-      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'word!Word.Interfaces.ParagraphLoadOptions:interface'
-    name: Word.Interfaces.ParagraphLoadOptions
-  - uid: 'word!Word.Interfaces.ContentControlLoadOptions:interface'
-    name: Word.Interfaces.ContentControlLoadOptions
-  - uid: 'word!Word.Interfaces.TableLoadOptions:interface'
-    name: Word.Interfaces.TableLoadOptions
-  - uid: 'word!Word.Interfaces.TableCellLoadOptions:interface'
-    name: Word.Interfaces.TableCellLoadOptions
+    \[[API 集： WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: Word.Interfaces.ParagraphLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ParagraphLoadOptions:interface" />
+- name: parentContentControl
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#parentContentControl:member
+  package: word!
+  fullName: parentContentControl
+  summary: >-
+    获取包含嵌入式图像的内容控件。 如果没有父内容控件，则会引发错误。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentContentControl?: Word.Interfaces.ContentControlLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ContentControlLoadOptions:interface" />
+- name: parentContentControlOrNullObject
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#parentContentControlOrNullObject:member
+  package: word!
+  fullName: parentContentControlOrNullObject
+  summary: >-
+    获取包含嵌入式图像的内容控件。 如果没有父内容控件，则返回 null 对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentContentControlOrNullObject?: Word.Interfaces.ContentControlLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.ContentControlLoadOptions:interface" />
+- name: parentTable
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#parentTable:member
+  package: word!
+  fullName: parentTable
+  summary: >-
+    获取包含嵌入式图像的 table。 如果表中不包含该错误，则会引发错误。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTable?: Word.Interfaces.TableLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableLoadOptions:interface" />
+- name: parentTableCell
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#parentTableCell:member
+  package: word!
+  fullName: parentTableCell
+  summary: >-
+    获取包含嵌入式图像的 tableCell。 如果表单元格中不包含错误，则会引发错误。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTableCell?: Word.Interfaces.TableCellLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableCellLoadOptions:interface" />
+- name: parentTableCellOrNullObject
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#parentTableCellOrNullObject:member
+  package: word!
+  fullName: parentTableCellOrNullObject
+  summary: >-
+    获取包含嵌入式图像的 tableCell。 如果未包含在 tableCell 中，则此关系返回空对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTableCellOrNullObject?: Word.Interfaces.TableCellLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableCellLoadOptions:interface" />
+- name: parentTableOrNullObject
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#parentTableOrNullObject:member
+  package: word!
+  fullName: parentTableOrNullObject
+  summary: >-
+    获取包含嵌入式图像的 table。 如果未包含在 table 中，则此关系返回空对象。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTableOrNullObject?: Word.Interfaces.TableLoadOptions;'
+    return:
+      type: <xref uid="word!Word.Interfaces.TableLoadOptions:interface" />
+- name: width
+  uid: word!Word.Interfaces.InlinePictureLoadOptions#width:member
+  package: word!
+  fullName: width
+  summary: >-
+    获取或设置描述嵌入式图像的宽度的数字。
+
+
+    \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ed3c49348d848e696584ff5ecfc502ae80c94756
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49327799"
