--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.listitemloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.listitemloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.ListItemLoadOptions:interface'
-    summary: |-
-      代表段落列表项格式。
+### YamlMime:TSType
+name: Word.Interfaces.ListItemLoadOptions
+uid: word!Word.Interfaces.ListItemLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.ListItemLoadOptions
+summary: >-
+  代表段落列表项格式。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.ListItemLoadOptions
-    fullName: Word.Interfaces.ListItemLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.ListItemLoadOptions#$all:member'
-      - 'word!Word.Interfaces.ListItemLoadOptions#level:member'
-      - 'word!Word.Interfaces.ListItemLoadOptions#listString:member'
-      - 'word!Word.Interfaces.ListItemLoadOptions#siblingIndex:member'
-  - uid: 'word!Word.Interfaces.ListItemLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.ListItemLoadOptions#level:member'
-    summary: |-
-      获取或设置 list 中项的级别。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: level
-    fullName: level
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'level?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.ListItemLoadOptions#listString:member'
-    summary: |-
-      以字符串形式获取列表项的项目符号、编号或图片。 只读。
+  \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.ListItemLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: level
+  uid: word!Word.Interfaces.ListItemLoadOptions#level:member
+  package: word!
+  fullName: level
+  summary: >-
+    获取或设置 list 中项的级别。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: listString
-    fullName: listString
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'listString?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.ListItemLoadOptions#siblingIndex:member'
-    summary: |-
-      获取 listItem 相对于同级元素的序号。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: siblingIndex
-    fullName: siblingIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'siblingIndex?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'level?: boolean;'
+    return:
+      type: boolean
+- name: listString
+  uid: word!Word.Interfaces.ListItemLoadOptions#listString:member
+  package: word!
+  fullName: listString
+  summary: >-
+    以字符串形式获取列表项的项目符号、编号或图片。 只读。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'listString?: boolean;'
+    return:
+      type: boolean
+- name: siblingIndex
+  uid: word!Word.Interfaces.ListItemLoadOptions#siblingIndex:member
+  package: word!
+  fullName: siblingIndex
+  summary: >-
+    获取 listItem 相对于同级元素的序号。 只读。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'siblingIndex?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 5730b5a7f83cd2fb8726c968d8fb6f4c521c6a36
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49327771"
