--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.listitemupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.listitemupdatedata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.ListItemUpdateData:interface'
-    summary: '一个用于更新列表项对象上的数据的接口，可用于`listItem.set({ ... })`<!-- -->.'
-    name: Word.Interfaces.ListItemUpdateData
-    fullName: Word.Interfaces.ListItemUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.ListItemUpdateData#level:member'
-  - uid: 'word!Word.Interfaces.ListItemUpdateData#level:member'
-    summary: |-
-      获取或设置 list 中项的级别。
+### YamlMime:TSType
+name: Word.Interfaces.ListItemUpdateData
+uid: word!Word.Interfaces.ListItemUpdateData:interface
+package: word!
+fullName: Word.Interfaces.ListItemUpdateData
+summary: 一个用于更新列表项对象上的数据的接口，可用于 `listItem.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: level
+  uid: word!Word.Interfaces.ListItemUpdateData#level:member
+  package: word!
+  fullName: level
+  summary: >-
+    获取或设置 list 中项的级别。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: level
-    fullName: level
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'level?: number;'
-      return:
-        type:
-          - number
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'level?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 67df4cb7fb032a2a431089ab8f7cd4323043f530
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49327792"
