--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.listloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.listloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.Interfaces.ListLoadOptions:interface'
-    summary: |-
-      包含一个[Word](xref:word!Word.Paragraph:class)对象的集合。
+### YamlMime:TSType
+name: Word.Interfaces.ListLoadOptions
+uid: word!Word.Interfaces.ListLoadOptions:interface
+package: word!
+fullName: Word.Interfaces.ListLoadOptions
+summary: >-
+  包含一个 [Word](xref:word!Word.Paragraph:class) 对象的集合。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: Word.Interfaces.ListLoadOptions
-    fullName: Word.Interfaces.ListLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: word!
-    children:
-      - 'word!Word.Interfaces.ListLoadOptions#$all:member'
-      - 'word!Word.Interfaces.ListLoadOptions#id:member'
-      - 'word!Word.Interfaces.ListLoadOptions#levelExistences:member'
-      - 'word!Word.Interfaces.ListLoadOptions#levelTypes:member'
-  - uid: 'word!Word.Interfaces.ListLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.ListLoadOptions#id:member'
-    summary: |-
-      获取列表的 id。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.ListLoadOptions#levelExistences:member'
-    summary: |-
-      检查 list 中是否包含所有 9 个级别。值为 true 表示级别存在，即各个级别至少存在一个列表项。只读。
+  \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: word!Word.Interfaces.ListLoadOptions#$all:member
+  package: word!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: word!Word.Interfaces.ListLoadOptions#id:member
+  package: word!
+  fullName: id
+  summary: >-
+    获取列表的 id。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: levelExistences
-    fullName: levelExistences
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'levelExistences?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'word!Word.Interfaces.ListLoadOptions#levelTypes:member'
-    summary: |-
-      获取 list 中的所有 9 个级别类型。 每种类型可以是 "项目符号"、"数字" 或 "图片"。 只读。
 
-      \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
-    name: levelTypes
-    fullName: levelTypes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'levelTypes?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: levelExistences
+  uid: word!Word.Interfaces.ListLoadOptions#levelExistences:member
+  package: word!
+  fullName: levelExistences
+  summary: >-
+    检查 list 中是否包含所有 9 个级别。值为 true 表示级别存在，即各个级别至少存在一个列表项。只读。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'levelExistences?: boolean;'
+    return:
+      type: boolean
+- name: levelTypes
+  uid: word!Word.Interfaces.ListLoadOptions#levelTypes:member
+  package: word!
+  fullName: levelTypes
+  summary: >-
+    获取 list 中的所有 9 个级别类型。 每种类型可以是 "项目符号"、"数字" 或 "图片"。 只读。
+
+
+    \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'levelTypes?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 11d24d679022524bb22368f2c44366a9f376e7bc
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49327778"
