--- a/docs/docs-ref-autogen/word/word/word.rangelocation.yml
+++ b/docs/docs-ref-autogen/word/word/word.rangelocation.yml
@@ -1,65 +1,41 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'word!Word.RangeLocation:enum'
-    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
-    name: Word.RangeLocation
-    fullName: Word.RangeLocation
-    langs:
-      - typeScript
-    type: enum
-    package: word!
-    children:
-      - 'word!Word.RangeLocation.after:member'
-      - 'word!Word.RangeLocation.before:member'
-      - 'word!Word.RangeLocation.content:member'
-      - 'word!Word.RangeLocation.end:member'
-      - 'word!Word.RangeLocation.start:member'
-      - 'word!Word.RangeLocation.whole:member'
-  - uid: 'word!Word.RangeLocation.after:member'
-    summary: 对象后面的点。 如果对象是段落内容控件或表格内容控件，则它是 EOP 或表格字符之后的点。
-    name: after
-    fullName: after
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"After"'
-  - uid: 'word!Word.RangeLocation.before:member'
-    summary: 仅用于内容控件。 它是开始标记前的点。
-    name: before
-    fullName: before
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Before"'
-  - uid: 'word!Word.RangeLocation.content:member'
-    summary: 介于 "Start" 和 "End" 之间的范围。
-    name: content
-    fullName: content
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Content"'
-  - uid: 'word!Word.RangeLocation.end:member'
-    summary: 对象的结束点。 对于 "段落"，它是 EOP 之前的点。 对于内容控件，它是结束标记之前的点。
-    name: end
-    fullName: end
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"End"'
-  - uid: 'word!Word.RangeLocation.start:member'
-    summary: 对象的起始点。 对于内容控件，它是开始标记之后的点。
-    name: start
-    fullName: start
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Start"'
-  - uid: 'word!Word.RangeLocation.whole:member'
-    summary: 对象的整个范围。 如果对象是段落内容控件或表格内容控件，则还会包含内容控件后面的 EOP 或表格字符。
-    name: whole
-    fullName: whole
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Whole"'
+### YamlMime:TSEnum
+name: Word.RangeLocation
+uid: word!Word.RangeLocation:enum
+package: word!
+fullName: Word.RangeLocation
+summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: after
+  uid: word!Word.RangeLocation.after:member
+  package: word!
+  summary: 对象后面的点。 如果对象是段落内容控件或表格内容控件，则它是 EOP 或表格字符之后的点。
+- name: before
+  uid: word!Word.RangeLocation.before:member
+  package: word!
+  summary: 仅用于内容控件。 它是开始标记前的点。
+- name: content
+  uid: word!Word.RangeLocation.content:member
+  package: word!
+  summary: 介于 "Start" 和 "End" 之间的范围。
+- name: end
+  uid: word!Word.RangeLocation.end:member
+  package: word!
+  summary: 对象的结束点。 对于 "段落"，它是 EOP 之前的点。 对于内容控件，它是结束标记之前的点。
+- name: start
+  uid: word!Word.RangeLocation.start:member
+  package: word!
+  summary: 对象的起始点。 对于内容控件，它是开始标记之后的点。
+- name: whole
+  uid: word!Word.RangeLocation.whole:member
+  package: word!
+  summary: 对象的整个范围。 如果对象是段落内容控件或表格内容控件，则还会包含内容控件后面的 EOP 或表格字符。
+metadata:
+  ms.openlocfilehash: e49dc9a0f7d85b9cff3e706bf008965ff2f90014
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49328219"
